LIST ( APPEND GReKO_files
Euler2DGReKOCons.cxx
Euler2DGReKOCons.hh
Euler2DGReKOConsToPuvtInPuvt.cxx
Euler2DGReKOConsToPuvtInPuvt.hh
Euler2DGReKOConsToRoe.cxx
Euler2DGReKOConsToRoe.hh
Euler2DGReKOLinearRoe.cxx
Euler2DGReKOLinearRoe.hh
#Euler2DGReKOMachAlphaPTToCons.cxx
#Euler2DGReKOMachAlphaPTToCons.hh
#Euler2DGReKOMachAlphaPTToPuvt.cxx
#Euler2DGReKOMachAlphaPTToPuvt.hh
Euler2DGReKOPuvt.cxx
Euler2DGReKOPuvt.hh
Euler2DGReKOPuvtToCons.cxx
Euler2DGReKOPuvtToCons.hh
Euler2DGReKOPuvtToConsInPuvt.cxx
Euler2DGReKOPuvtToConsInPuvt.hh
GReKO.hh
GReKOReactionTerm.cxx
GReKOReactionTerm.hh
NavierStokes2DGReKOBSLPuvt.cxx
NavierStokes2DGReKOBSLPuvt.hh
NavierStokes2DGReKOPuvt.cxx
NavierStokes2DGReKOPuvt.hh
NavierStokes2DGReKOSSTPuvt.cxx
NavierStokes2DGReKOSSTPuvt.hh
NavierStokesGReKOPhysicalModel.ci
NavierStokesGReKOPhysicalModel.cxx
NavierStokesGReKOPhysicalModel.hh
#WNavierStokes2DGReKOPuvt.cxx
#WNavierStokes2DGReKOPuvt.hh
Euler2DGReKLogOCons.cxx
Euler2DGReKLogOCons.hh
Euler2DGReKLogOConsToPuvtInPuvt.cxx
Euler2DGReKLogOConsToPuvtInPuvt.hh
Euler2DGReKLogOPuvt.cxx
Euler2DGReKLogOPuvt.hh
Euler2DGReKLogOPuvtToCons.cxx
Euler2DGReKLogOPuvtToCons.hh
Euler2DGReKLogOPuvtToConsInPuvt.cxx
Euler2DGReKLogOPuvtToConsInPuvt.hh
NavierStokes2DGReKLogOBSLPuvt.cxx
NavierStokes2DGReKLogOBSLPuvt.hh
NavierStokes2DGReKLogOPuvt.cxx
NavierStokes2DGReKLogOPuvt.hh
NavierStokes2DGReKLogOSSTPuvt.cxx
NavierStokes2DGReKLogOSSTPuvt.hh
NavierStokesGReKLogOPhysicalModel.ci
NavierStokesGReKLogOPhysicalModel.cxx
NavierStokesGReKLogOPhysicalModel.hh
)

LIST ( APPEND GReKO_cflibs NavierStokes KOmega )
LIST ( APPEND GReKO_requires_mods NavierStokes KOmega)
CF_ADD_PLUGIN_LIBRARY ( GReKO )
CF_WARN_ORPHAN_FILES()

ADD_SUBDIRECTORY ( testcases )

